[package]
name = "clawscope"
version = "0.1.0"
edition = "2021"
description = "CLI tool to inspect OpenClaw agent sessions"
license = "MIT"

[[bin]]
name = "clawscope"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
